# uva608

./: .clang-format  CMakeLists.txt  main.cpp  unittest.cpp
scripts/: clang-format-project  test-clang-format.sh
